# agentx

./: .env.example  .gitignore  LICENSE  README.md  baby_agi.py  pyproject.toml  requirements.txt
.github/workflows/: linting-and-testing.yml  testing.yml
agentx/: auto_gpt.py  autogpt.py  baby_agi.py  baby_agi_controller.py  baby_agi_with_tools.py  main.py
agentx/agents/autogpt/: __init__.py  autogpt_agent.py  main.py
agentx/agents/babyagi/: __init__.py  baby_agi.py  main.py  utils.py
agentx/agents/babyagi/chains/: __init__.py  task_creation_chain.py  task_execution_chain.py  task_prioritization_chain.py
agentx/memory/: faiss.py
helpers/: minify.py  python-minifier.py
tests/: conftest.py  test_baby_agi_controller.py
tests/agents/: __init__.py
tests/agents/autogpt/: __init__.py  test_autogpt.py
tests/agents/babyagi/: __init__.py  test_utils.py
tests/agents/babyagi/chains/: __init__.py  test_task_creation_chain.py  test_task_execution_chain.py  test_task_prioritization_chain.py
