[tool.poetry]
name = "agentx"
version = "0.1.0"
description = "An AI controller that relies on three LLM chains to perform tasks"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.137"
openai = "^0.27.4"
pydantic = "^1.10.7"
faiss-cpu = "^1.7.3"
tiktoken = "^0.3.3"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
